# open-chmbl

./: .gitignore  ARCHITECTURE.md  README.md
.claude/skills/chmbl-architecture-contract/: SKILL.md
.claude/skills/chmbl-build-and-env/: SKILL.md
.claude/skills/chmbl-can-reference/: SKILL.md
.claude/skills/chmbl-change-control/: SKILL.md
.claude/skills/chmbl-config-and-flags/: SKILL.md
.claude/skills/chmbl-de09-campaign/: SKILL.md
.claude/skills/chmbl-debugging-playbook/: SKILL.md
.claude/skills/chmbl-diagnostics-and-tooling/: SKILL.md
.claude/skills/chmbl-diagnostics-and-tooling/scripts/: fsm_metrics.py  trc_stats.py
.claude/skills/chmbl-docs-and-writing/: SKILL.md
.claude/skills/chmbl-docs-and-writing/scripts/: check_links.py
.claude/skills/chmbl-external-positioning/: SKILL.md
.claude/skills/chmbl-failure-archaeology/: SKILL.md
.claude/skills/chmbl-proof-and-analysis-toolkit/: SKILL.md
.claude/skills/chmbl-research-frontier/: SKILL.md
.claude/skills/chmbl-research-methodology/: SKILL.md
.claude/skills/chmbl-run-and-operate/: SKILL.md
.claude/skills/chmbl-validation-and-qa/: SKILL.md
.github/workflows/: firmware-build.yml
brake_light/: README.md
brake_light/hardware/: README.md  brake_light.kicad_pcb  brake_light.kicad_pro  brake_light.kicad_sch
brake_light/hardware/enclosure/: .gitignore  Makefile  README.md
brake_light/hardware/enclosure/scad/: assembly.scad  enclosure.scad  end_cap.scad  inner_shell.scad  lens_mold.scad  outer_body.scad  outer_shell.scad  pcb.scad
brake_light/led-driver-eval/: led_drv_eval.kicad_prl.kicad_pcb  led_drv_eval.kicad_prl.kicad_pro  led_drv_eval.kicad_prl.kicad_sch
brake_light/led-driver-eval/reference/datasheets/: README.md
brake_light/software/: CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c3
brake_light/software/main/: CMakeLists.txt  Kconfig.projbuild  blink.c  cmd_light.c  cmd_link.c  console.c  console.h  link.c  link.h  main.c  net.c  net.h  pairing.c  pairing.h
docs/: can-profiles.md  cli.md  feature-functions.md  firmware.md  hardware.md  led-brightness-benchmark.md  protocol.md  roadmap.md  safety-regulatory.md
docs/design/: README.md  de-01-espnow-link.md  de-02-auto-brightness.md  de-03-link-loss-failsafe.md  de-04-led-render.md  de-08-can-decode.md  de-09-brake-decel-logic.md  de-10-status-indicator.md
docs/design/explorations/: README.md  mounting-magnetic.md
logger/: README.md
logger/hardware/: .gitignore  BRINGUP.md  README.md  logger.kicad_pcb  logger.kicad_prl  logger.kicad_pro  logger.kicad_sch
logger/hardware/production_202607091421/: bom.csv  designators.csv  netlist.ipc  positions.csv
logger/hardware/production_202607172215/: bom_202607172215.csv  designators.csv  netlist.ipc  positions_202607172215.csv
logger/hardware/reference/datasheets/: .gitignore  README.md
logger/software/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
logger/software/main/: CMakeLists.txt  Kconfig.projbuild  display_init.c  display_init.h  font8x8.c  font8x8.h  idf_component.yml  lcd_console.c  lcd_console.h  logger_main.c  status_led.c  status_led.h  trc_format.c  trc_format.h  ui_log.c  ui_log.h
profiles/: triumph_tr.dbc
tools/: gen_profile.py  golden_check.py  requirements.txt  trc_viz.html  trc_viz.py
transmitter/: README.md
transmitter/hardware/: README.md  euro5.md
transmitter/software/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
transmitter/software/main/: CMakeLists.txt  Kconfig.projbuild  bike_profile.h  bike_profile_triumph_tr.c  bike_profiles.h  blink.c  can_decode.c  can_decode.h  can_rx.c  can_rx.h  cmd_can.c  cmd_net.c  cmd_pair.c  cmd_sig.c  cmd_state.c  cmd_system.c  console.c  console.h  main.c  net.c  net.h  pairing.c  protocol.h
transmitter/software/test_host/: CMakeLists.txt  trc_replay.c
